--- a/HuntingAndFishingStore solution/Application/Views/Shared/_Layout.cshtml
+++ b/HuntingAndFishingStore solution/Application/Views/Shared/_Layout.cshtml
@@ -23,17 +23,15 @@
         <span class="icon-bar"></span>
     </a>
     <div class="navbar-inner">
-        <a class="brand"><img src="../../Content/img/logo.jpg" style="width: 193px; height: 47px" alt="Bootsshop"></a>
+        <a class="brand"><img src="../../Content/img/logo.jpg" style="width: 193px; height: 47px" alt="Bootsshop"/></a>
 
         <ul id="topMenu" class="nav pull-right">
             <li class=""><a href="">Specials Offer</a></li>
             <li class=""><a href="@*normal.html*@">Delivery</a></li>
             <li class=""><a href="@*contact.html*@">Contact</a></li>
             @*<li class="">@Html.ActionLink("Login", "LogIn", "Account")</li>*@
-            @*<li class="">@Html.ActionLink("Register", "Register", "Account")</li>*@
-
+            <li class="">@Html.ActionLink("Register", "Register", "Account")</li>
         </ul>
-            
     </div>
 </div>
     @RenderBody()
