--- a/HuntingAndFishingStore solution/Application/Views/Shared/_Layout.cshtml
+++ b/HuntingAndFishingStore solution/Application/Views/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
             <li class=""><a href="">Specials Offer</a></li>
             <li class=""><a href="@*normal.html*@">Delivery</a></li>
             <li class=""><a href="@*contact.html*@">Contact</a></li>
-            @*<li class="">@Html.ActionLink("Login", "LogIn", "Account")</li>*@
+            <li class="">@Html.ActionLink("Login", "Login", "Account")</li>
             <li class="">@Html.ActionLink("Register", "Register", "Account")</li>
         </ul>
     </div>
