fixed sidebar on index page

--- a/HuntingAndFishingStore solution/Application/Views/Home/Index.cshtml
+++ b/HuntingAndFishingStore solution/Application/Views/Home/Index.cshtml
@@ -114,12 +114,12 @@
                         @*<div class="well well-small">@*<a id="myCart" href="product_summary.html"><img src="themes/images/ico-cart.png" alt="cart">3 Items in your cart  <span class="badge badge-warning pull-right">$155.00</span></a></div>*@
                         <ul id="sideManu" class="nav nav-tabs nav-stacked">
                             <li class="subMenu open">
-                                <a> ELECTRONICS [230]</a>
+                                <a> FIREARMS [230]</a>
                                 <ul>
-                                    <li><a class="active" href="@*products.html*@"><i class="icon-chevron-right"></i>Cameras (100) </a></li>
-                                    <li><a href="@*products.html*@"><i class="icon-chevron-right"></i>Computers, Tablets & laptop (30)</a></li>
-                                    <li><a href="@*products.html*@"><i class="icon-chevron-right"></i>Mobile Phone (80)</a></li>
-                                    <li><a href="@*products.html*@"><i class="icon-chevron-right"></i>Sound & Vision (15)</a></li>
+                                    <li><a class="active" href="@*products.html*@"><i class="icon-chevron-right"></i>Pistols (100) </a></li>
+                                    <li><a href="@*products.html*@"><i class="icon-chevron-right"></i>Shotguns (30)</a></li>
+                                    <li><a href="@*products.html*@"><i class="icon-chevron-right"></i>Rifles (80)</a></li>
+                                    <li><a href="@*products.html*@"><i class="icon-chevron-right"></i>Submachine guns (15)</a></li>
                                 </ul>
                             </li>
                             <li class="subMenu">
@@ -135,21 +135,16 @@
                                 </ul>
                             </li>
                             <li class="subMenu">
-                                <a>FOOD AND BEVERAGES [1000]</a>
+                                <a>ACCESSORIES [1000]</a>
                                 <ul style="display: none">
-                                    <li><a href="@*products.html"><i class="icon-chevron-right"></i>Angoves  (35)</a></li>
-                                        <li><a href="products.html"><i class="icon-chevron-right"></i>Bouchard Aine & Fils (8)</a></li>
-                                        <li><a href="products.html"><i class="icon-chevron-right"></i>French Rabbit (5)</a></li>
-                                        <li><a href="products.html"><i class="icon-chevron-right"></i>Louis Bernard  (45)</a></li>
-                                        <li><a href="products.html"><i class="icon-chevron-right"></i>BIB Wine (Bag in Box) (8)</a></li>
-                                        <li><a href="products.html"><i class="icon-chevron-right"></i>Other Liquors & Wine (5)</a></li>
-                                        <li><a href="products.html"><i class="icon-chevron-right"></i>Garden (3)</a></li>
-                                        <li><a href="products.html*@"><i class="icon-chevron-right"></i>Khao Shong (11)</a></li>
+                                    <li><a href="@*products.html"><i class="icon-chevron-right"></i>Holsters  (35)</a></li>
+                                        <li><a href="products.html"><i class="icon-chevron-right"></i>Scopes (8)</a></li>
+                                        <li><a href="products.html"><i class="icon-chevron-right"></i>Ammunition (45)</a></li>
+                                    <li><a href="products.html"><i class="icon-chevron-right"></i>Knives (55)</a></li>
+                                    <li><a href="products.html"><i class="icon-chevron-right"></i>Tazers (55)</a></li>
+                                    <li><a href="products.html"><i class="icon-chevron-right"></i>Batons (55)</a></li>
                                 </ul>
                             </li>
-                            <li><a href="@*products.html">HEALTH & BEAUTY [18]</a></li>
-                                <li><a href="products.html">SPORTS & LEISURE [58]</a></li>
-                                <li><a href="products.html*@">BOOKS & ENTERTAINMENTS [14]</a></li>
                         </ul>
                         <br/>
 
