--- a/HuntingAndFishingStore solution/Application/Views/Admin/AdminLogin.cshtml
+++ b/HuntingAndFishingStore solution/Application/Views/Admin/AdminLogin.cshtml
@@ -1,11 +1,11 @@
-﻿@model Models.Dtos.LoginDto
+﻿@model Models.Dtos.AdminDto
 
 @{
     ViewBag.Title = "Login";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2 align="center">Login</h2>
+<h2 align="center">Admin</h2>
 
 @using (Html.BeginForm())
 {
@@ -38,4 +38,3 @@
     </div>
 
 }
-
