added ProductController, added Image to each Product, fixed buttons

--- a/HuntingAndFishingStore solution/Application/Views/Home/Index.cshtml
+++ b/HuntingAndFishingStore solution/Application/Views/Home/Index.cshtml
@@ -110,41 +110,10 @@
                         <!-- Sidebar ================================================== -->
                     <div id="sidebar" class="span3">
                         
-                        <!--Basket-->>
+                        <!--Basket-->
                         @*<div class="well well-small">@*<a id="myCart" href="product_summary.html"><img src="themes/images/ico-cart.png" alt="cart">3 Items in your cart  <span class="badge badge-warning pull-right">$155.00</span></a></div>*@
                         <ul id="sideManu" class="nav nav-tabs nav-stacked">
-                            <li class="subMenu open">
-                                <a> FIREARMS [230]</a>
-                                <ul>
-                                    <li><a class="active" href="@*products.html*@"><i class="icon-chevron-right"></i>Pistols (100) </a></li>
-                                    <li><a href="@*products.html*@"><i class="icon-chevron-right"></i>Shotguns (30)</a></li>
-                                    <li><a href="@*products.html*@"><i class="icon-chevron-right"></i>Rifles (80)</a></li>
-                                    <li><a href="@*products.html*@"><i class="icon-chevron-right"></i>Submachine guns (15)</a></li>
-                                </ul>
-                            </li>
-                            <li class="subMenu">
-                                <a> CLOTHES [840] </a>
-                                <ul style="display: none">
-                                    <li><a href="@*products.html"><i class="icon-chevron-right"></i>Women's Clothing (45)</a></li>
-                                        <li><a href="products.html"><i class="icon-chevron-right"></i>Women's Shoes (8)</a></li>
-                                        <li><a href="products.html"><i class="icon-chevron-right"></i>Women's Hand Bags (5)</a></li>
-                                        <li><a href="products.html"><i class="icon-chevron-right"></i>Men's Clothings  (45)</a></li>
-                                        <li><a href="products.html"><i class="icon-chevron-right"></i>Men's Shoes (6)</a></li>
-                                        <li><a href="products.html"><i class="icon-chevron-right"></i>Kids Clothing (5)</a></li>
-                                        <li><a href="products.html*@"><i class="icon-chevron-right"></i>Kids Shoes (3)</a></li>
-                                </ul>
-                            </li>
-                            <li class="subMenu">
-                                <a>ACCESSORIES [1000]</a>
-                                <ul style="display: none">
-                                    <li><a href="@*products.html"><i class="icon-chevron-right"></i>Holsters  (35)</a></li>
-                                        <li><a href="products.html"><i class="icon-chevron-right"></i>Scopes (8)</a></li>
-                                        <li><a href="products.html"><i class="icon-chevron-right"></i>Ammunition (45)</a></li>
-                                    <li><a href="products.html"><i class="icon-chevron-right"></i>Knives (55)</a></li>
-                                    <li><a href="products.html"><i class="icon-chevron-right"></i>Tazers (55)</a></li>
-                                    <li><a href="products.html"><i class="icon-chevron-right"></i>Batons (55)</a></li>
-                                </ul>
-                            </li>
+                            @Html.Partial("_SidebarPartial")
                         </ul>
                         <br/>
 
