--- a/HuntingAndFishingStore solution/Application/Views/Shared/_AdminLayout.cshtml
+++ b/HuntingAndFishingStore solution/Application/Views/Shared/_AdminLayout.cshtml
@@ -24,6 +24,7 @@
         <div class="navbar-inner">
             <a class="brand"><img src="../../Content/img/logo.jpg" style="width: 193px; height: 47px" alt="Bootsshop"></a>
             <ul id="topMenu" class="nav pull-right">
+                <li class="">@Html.ActionLink("Products", "AddProduct","Admin")</li>
                 <li class="">@Html.ActionLink("Search", "Search", "Search")</li>
                 <li class="">@Html.ActionLink("Logout", "Logout", "Admin")</li>
             </ul>
