--- a/HuntingAndFishingStore solution/Application/Views/Admin/AddHolster.cshtml
+++ b/HuntingAndFishingStore solution/Application/Views/Admin/AddHolster.cshtml
@@ -1,4 +1,4 @@
-﻿@model Models.Holster
+﻿@model Models.Dtos.HolsterDTO
 
 @{
     ViewBag.Title = "AddHolster";
@@ -7,7 +7,7 @@
 
 <h2>AddHolster</h2>
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm("AddHolster", "Admin", FormMethod.Post, new { @class = "form-horizontal", enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
     
@@ -20,6 +20,13 @@
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
+            </div>
+        </div>
+        
+        <div class="form-group">
+            @Html.LabelFor(m => m.Image, new { @class = "col-md-2 control-label" })
+            <div class="col-md-10">
+                @Html.TextBoxFor(m => m.Image, new { type = "file" })
             </div>
         </div>
 
