--- a/HuntingAndFishingStore solution/Application/Views/Admin/AddProduct.cshtml
+++ b/HuntingAndFishingStore solution/Application/Views/Admin/AddProduct.cshtml
@@ -8,7 +8,7 @@
 
 <container>
     <div class="form-group" align="center">
-        <div class="col-md-3">
+        <div class="col-md-2">
             <div>
                 @Html.ActionLink("Add Baton", "AddBaton", "Admin")
             </div>
@@ -35,6 +35,35 @@
             </div>
             <div>
                 @Html.ActionLink("Add Tazer", "AddTazer", "Admin")
+            </div>
+        </div>
+        <div class="col-md-2">
+            <div>
+                @Html.ActionLink("Remove Baton", "RemoveBaton", "Admin")
+            </div>
+            <div>
+                @Html.ActionLink("Remove Clothing", "RemoveClothing", "Admin")
+            </div>
+            <div>
+                @Html.ActionLink("Remove Firearm", "RemoveFirearm", "Admin")
+            </div>
+            <div>
+                @Html.ActionLink("Remove Flashlight", "RemoveFlashlight", "Admin")
+            </div>
+            <div>
+                @Html.ActionLink("Remove Holster", "RemoveHolster", "Admin")
+            </div>
+            <div>
+                @Html.ActionLink("Remove Knife", "RemoveKnife", "Admin")
+            </div>
+            <div>
+                @Html.ActionLink("Remove Round", "RemoveRound", "Admin")
+            </div>
+            <div>
+                @Html.ActionLink("Remove Scope", "RemoveScope", "Admin")
+            </div>
+            <div>
+                @Html.ActionLink("Remove Tazer", "RemoveTazer", "Admin")
             </div>
         </div>
     </div>
