--- a/HuntingAndFishingStore solution/Application/Views/Admin/AddRound.cshtml
+++ b/HuntingAndFishingStore solution/Application/Views/Admin/AddRound.cshtml
@@ -1,4 +1,4 @@
-﻿@model Models.Round
+﻿@model Models.Dtos.RoundDTO
 
 @{
     ViewBag.Title = "AddRound";
@@ -7,7 +7,7 @@
 
 <h2>AddRound</h2>
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm("AddRound", "Admin", FormMethod.Post, new { @class = "form-horizontal", enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
     
@@ -23,11 +23,20 @@
             </div>
         </div>
 
+
+
         <div class="form-group">
             @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(m => m.Image, new { @class = "col-md-2 control-label" })
+            <div class="col-md-10">
+                @Html.TextBoxFor(m => m.Image, new { type = "file" })
             </div>
         </div>
 
