RemoveProductsAdminAddedHomePage(or something like that)

--- a/HuntingAndFishingStore solution/Application/Views/Shared/_AdminLayout.cshtml
+++ b/HuntingAndFishingStore solution/Application/Views/Shared/_AdminLayout.cshtml
@@ -24,9 +24,9 @@
         <div class="navbar-inner">
             <a class="brand"><img src="../../Content/img/logo.jpg" style="width: 193px; height: 47px" alt="Bootsshop"></a>
             <ul id="topMenu" class="nav pull-right">
+                <li class="">@Html.ActionLink("List Users", "GetUsers", "Admin")</li>
                 <li class="">@Html.ActionLink("Remove Products", "RemoveProduct", "Admin")</li>
                 <li class="">@Html.ActionLink("Add Products", "AddProduct","Admin")</li>
-                <li class="">@Html.ActionLink("Search", "Search", "Search")</li>
                 <li class="">@Html.ActionLink("Logout", "Logout", "Admin")</li>
             </ul>
         </div>
