Delete users and fix categories of products

--- a/HuntingAndFishingStore solution/Application/Views/Admin/AddBaton.cshtml
+++ b/HuntingAndFishingStore solution/Application/Views/Admin/AddBaton.cshtml
@@ -11,7 +11,7 @@
 {
     @Html.AntiForgeryToken()
     
-    <div class="form-horizontal">
+    <div class="form-vertical">
         <h4>Baton</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
