--- a/HuntingAndFishingStore solution/Application/Views/Admin/GetUsers.cshtml
+++ b/HuntingAndFishingStore solution/Application/Views/Admin/GetUsers.cshtml
@@ -81,9 +81,7 @@
             @Html.DisplayFor(modelItem => item.IdentityCardNumber)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
+            @Html.ActionLink("Delete", "RemoveUser", new { id=item.Id })
         </td>
     </tr>
 }
