--- a/HuntingAndFishingStore solution/Application/Views/Product/ListAmmunition.cshtml
+++ b/HuntingAndFishingStore solution/Application/Views/Product/ListAmmunition.cshtml
@@ -44,6 +44,12 @@
         <td>
             @Html.DisplayFor(modelItem => item.Quantity)
         </td>
+        @if (User.Identity.IsAuthenticated)
+        {
+            <td>
+                @Html.ActionLink("Add To Chart", "AddToChart", "Chart", new { productId = item.Id, user=User.Identity.Name })
+            </td>
+        }
     </tr>
 }
 
